--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -21,44 +21,67 @@
     width: 85vw;
     margin: 0 auto;
     position: relative;
-    overflow: hidden;
     padding: 50px 0;
-}
-
-.section_container h1 {
-    margin-bottom: 25px;
 }
 
 .products_container {
     display: flex;
-    padding: 0 6vw;
-    overflow-x: auto;
+    padding: 30px 6vw;
+    overflow-x:hidden;
     scroll-behavior: smooth;
 }
 
-.products_container::-webkit-scrollbar {
-    display: none;
-}
-
-.products_container div {
+.product_card {
     flex: 0 0 auto;
     width: 300px;
+    height: 385px;
     margin-right: 40px;
-    height: 450px;
-    background-color: rgba(196, 196, 196, 0.466);
+    border: 1px solid rgb(233, 233, 233);
+    transition: .5s;
+    cursor: pointer;
+    background-color: rgb(242, 246, 250);
+}
+
+.product_card:hover {
+    border: 2px solid #004483;
+    transform: scale(1.01);
+}
+
+.product_card img {
+    max-width: 100%;
+    max-height: 100%;
+    border-bottom: 1px solid rgb(233, 233, 233);
+    padding: 10px;
+}
+
+.product_card h4 {
+    font-size: 1.1em;
+    color: rgb(37, 37, 37);
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+.product_card p {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #004483;
+    margin-left: 15px;
 }
 
 .products_container button {
+    position: absolute;
+    z-index: 10;
     width: 100px;
-    height: 450px;
+    height: 400px;
     border: none;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 20%);
 }
 
 .products_container button i {
     color: #222;
-    font-size: 3em;
-    opacity: 0.6;
+    font-size: 4em;
+    opacity: 0.7;
     cursor: pointer;
 }
 
@@ -67,12 +90,63 @@
 }
 
 .next_btn {
-    position: absolute;
     right: 0;
+    top: 100px;
 }
 
 .prev_btn {
     transform: rotate(180deg);
-    position: absolute;
     left: 0;
+    top: 100px;
+}
+
+/* -- SECTION - COLLECTIONS --*/
+
+.row1,
+.row2_col1,
+.row2_col2 {
+    position: relative;
+    cursor: pointer;
+}
+
+.row1 {
+    display: block;
+}
+
+.row2 {
+    display: flex;
+    gap: 5px;
+}
+
+.row2_col1,
+.row2_col2 {
+    flex-basis: 50%;
+}
+
+.row1 img,
+.row2_col1 img,
+.row2_col2 img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    transition: 0.5s;
+}
+
+.collection_section h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5em;
+    z-index: 1;
+    color: rgb(233, 196, 30);
+    text-shadow: 2px 2px 2px black;
+    transition: 0.5s;
+}
+
+.row1:hover h2,
+.row2_col1:hover h2,
+.row2_col2:hover h2 {
+    color: rgb(233, 162, 30);
+    text-shadow: 5px 5px 5px black;
 }
