--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -1,4 +1,6 @@
 .header {
+    max-width: 1905px;
+    margin: 0 auto;
     width: 100%;
     height: calc(100vh - 139px);
     background-color: rgba(0, 0, 0, 0.726);
@@ -18,6 +20,7 @@
 }
 
 .section_container {
+    max-width: 1905px;
     width: 85vw;
     margin: 0 auto;
     position: relative;
@@ -102,6 +105,11 @@
 
 /* -- SECTION - COLLECTIONS --*/
 
+.collection_container {
+    max-width: 1905px;
+    margin: 0 auto;
+}
+
 .row1,
 .row2_col1,
 .row2_col2 {
@@ -132,7 +140,7 @@
     transition: 0.5s;
 }
 
-.collection_section h2 {
+.collection_container h2 {
     position: absolute;
     top: 50%;
     left: 50%;
