--- a/src/components/layout/Cart.module.css
+++ b/src/components/layout/Cart.module.css
@@ -24,7 +24,7 @@
     top: 0;
     right: 0;
     transform: translateX(100%);
-    width: 500px;
+    width: 460px;
     height: 100vh;
     background-color: rgb(240, 240, 240);
     z-index: 2;
@@ -38,12 +38,12 @@
 }
 
 .show_window h1{
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 1.5em;
 }
 
 .products_cart {
     flex: 1;
-    margin: 30px 0;
 }
 
 .footer_cart {
@@ -53,7 +53,7 @@
 
 .footer_cart h3 {
     text-align: end;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .footer_cart span {
@@ -62,8 +62,8 @@
 
 .footer_cart button {
     align-self: center;
-    margin-bottom: 20px;
-    padding: 20px 50px;
+    margin-bottom: 10px;
+    padding: 15px 50px;
     border: none;
     background-color: #004483;
     color: white;
