--- a/src/components/layout/Cart.module.css
+++ b/src/components/layout/Cart.module.css
@@ -19,7 +19,7 @@
 .cart_window {
     display: flex;
     flex-direction: column;
-    padding: 0 30px;
+    padding: 30px;
     position: fixed;
     top: 0;
     right: 0;
@@ -37,12 +37,8 @@
     opacity: 1;
 }
 
-.show_window h1{
-    margin-top: 20px;
-    font-size: 1.5em;
-}
-
 .products_cart {
+    padding: 20px 0;
     flex: 1;
 }
 
