--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -20,27 +20,33 @@
 }
 
 .section_container {
-    max-width: 1905px;
-    width: 85vw;
+    max-width: 1520px;
     margin: 0 auto;
     position: relative;
     padding-top: 50px;
+    overflow-x: hidden;
 }
 
 .products_container {
     display: flex;
-    padding: 30px 6vw;
-    overflow-x:hidden;
-    scroll-behavior: smooth;
+    padding: 30px 0;
+}
+
+.items_container {
+    display: flex;
+    margin-left: 100px;
+    transform: translateX(0);
+    transition: all .5s ease;
 }
 
 .products_container button {
     position: absolute;
+    padding: 2px 0;
     z-index: 10;
-    width: 100px;
+    width: 94px;
     height: 400px;
     border: none;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 20%);
+    background: rgba(255, 255, 255);
 }
 
 .products_container button i {
