--- a/src/components/pages/Form.module.css
+++ b/src/components/pages/Form.module.css
@@ -1,4 +1,5 @@
 .form_container {
+    padding: 20px 0;
     min-height: 70vh;
     display: flex;
     flex-direction: column;
@@ -66,4 +67,15 @@
     padding-top: 15px;
     text-align: center;
     color: #666;
+}
+
+@media (max-width: 858px) {
+    .form_container div {
+        padding: 20px;
+        width: 300px;
+    }
+
+    .form_container input {
+        width: 93%;
+    }
 }
