--- a/src/components/pages/ProductList.module.css
+++ b/src/components/pages/ProductList.module.css
@@ -18,6 +18,7 @@
 
 .section_container aside {
     width: 250px;
+    padding-left: 20px;
 }
 
 .section_container aside {
@@ -76,4 +77,31 @@
 .products {
     display: flex;
     flex-wrap: wrap;
+
+}
+
+.products a {
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+
+@media (max-width: 858px) {
+    aside {
+        display: none;
+    }
+
+    .section_container h1 {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .products {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .products a {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
 }
