--- a/src/components/pages/ProductList.module.css
+++ b/src/components/pages/ProductList.module.css
@@ -5,11 +5,8 @@
 }
 
 .section_container h1 {
-    margin-bottom: 50px;
     text-transform: capitalize;
     font-size: 2em;
-    border-bottom: 1px solid #004483;
-    padding-bottom: 10px;
 }
 
 .flex {
@@ -83,6 +80,19 @@
 .products a {
     margin-right: 40px;
     margin-bottom: 40px;
+}
+
+.products_container_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #004483;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
+}
+
+.products_container_header label {
+    margin-right: 10px;
 }
 
 @media (max-width: 858px) {
