--- a/src/components/pages/Form.module.css
+++ b/src/components/pages/Form.module.css
@@ -69,6 +69,14 @@
     color: #666;
 }
 
+.error {
+    color: red;
+    font-size: 0.75em;
+    margin-top: -10px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+}
+
 @media (max-width: 858px) {
     .form_container div {
         padding: 20px;
