--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -132,7 +132,7 @@
     text-shadow: 5px 5px 5px black;
 }
 
-@media (max-width: 858px) {
+@media (max-width: 1520px) {
     .header {
         margin-bottom: 30px;
     }
@@ -162,11 +162,17 @@
     }
 
     .items_container a {
-        margin-right: 0;
+        margin-right: 20px;
         margin-bottom: 30px;
     }
+}
 
+@media (max-width: 660px) {
     .collection_container {
         display: none;
+    }
+
+    .items_container a {
+        margin-right: 0;
     }
 }
