--- a/src/components/products/CartCard.module.css
+++ b/src/components/products/CartCard.module.css
@@ -3,11 +3,34 @@
     margin-bottom: 5px;
 }
 
-.card h1 {
-    padding-left: 10px;
-    font-size: 0.9em;
-    padding: 5px 10px;
+.card_header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-bottom: 1px solid rgb(241, 241, 241);
+    padding: 5px;
+    background-color: rgb(218, 218, 255);
+}
+
+.card_header button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    border: none;
+    cursor: pointer;
+}
+
+.card_header button i {
+    font-size: 15px;
+}
+
+.card h1 {
+    margin-left: 10px;
+    font-size: 16px;
 }
 
 .card_info img {
