--- a/src/components/pages/ProductList.module.css
+++ b/src/components/pages/ProductList.module.css
@@ -78,7 +78,6 @@
 .products {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .products a {
@@ -93,7 +92,7 @@
     border-bottom: 1px solid #004483;
     padding-bottom: 10px;
     margin-right: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .products_container_header label {
@@ -116,7 +115,15 @@
     }
 
     .products a {
+        margin-right: 10px;
+        margin-left: 10px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 500px) {
+    .products a {
         margin-right: 0;
-        margin-bottom: 30px;
+        margin-left: 0;
     }
 }
