--- a/src/components/pages/ProductList.module.css
+++ b/src/components/pages/ProductList.module.css
@@ -105,8 +105,12 @@
     }
 
     .section_container h1 {
-        margin-left: 20px;
+        margin-left: 10px;
         margin-right: 20px;
+    }
+
+    .products_container_header {
+        margin-left: 10px;
     }
 
     .products {
